ISTO-62 Refactor after merge.